--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,64 +1,43 @@
 # Core Framework
-fastapi==0.115.0
-uvicorn[standard]==0.32.0
-anyio==4.6.2
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+anyio==3.7.1
+starlette==0.27.0
 
 # Database
-sqlalchemy[asyncio]==2.0.36
+sqlalchemy[asyncio]==2.0.23
 asyncpg==0.29.0
-databases==0.9.0
-alembic==1.13.3
+alembic==1.12.1
 
 # Authentication & Security
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
-bcrypt==5.0.0
+python-multipart==0.0.6
 
-# Data Validation
-pydantic-settings==2.6.1
-pydantic[email]==2.12.4
+# Data Validation & Configuration
+pydantic==2.5.0
+pydantic-settings==2.1.0
+email-validator==2.1.0
 
 # HTTP Client
-httpx==0.27.2
-
-# File Handling
-python-multipart==0.0.9
+httpx==0.25.2
 
 # Storage Integration
-supabase==2.5.1
+supabase==2.3.0
+storage3==0.5.3
 
 # Logging & Monitoring
 structlog==23.2.0
-rich==13.7.0
 
 # Rate Limiting
 slowapi==0.1.9
-
-# CORS Support
-fastapi-cors==0.0.6
-
-# Background Tasks
-celery==5.3.4
-redis==5.0.1
-
-# Development & Testing
-pytest==7.4.4
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
-httpx==0.27.2
-factory-boy==3.3.0
-
-# Documentation
-mkdocs==1.5.3
-mkdocs-material==9.4.8
+limits==3.7.0
 
 # Environment Management
 python-dotenv==1.0.0
 
 # Date/Time Utilities
 python-dateutil==2.8.2
-pytz==2023.3
 
 # Additional Utilities
 click==8.1.7
-tqdm==4.66.1
