--- a/Frontend/.env.production
+++ b/Frontend/.env.production
@@ -1,3 +1,3 @@
 # Backend API URL (will be replaced by Render)
-VITE_API_URL=https://your-backend-url.onrender.com
+VITE_API_URL=https://pos-management-um33.onrender.com
 APP_ENV=production
