Refactor Dockerfile comments and CMD instruction
Updated Dockerfile to improve comments and CMD syntax.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,19 +1,16 @@
 FROM python:3.11.9-slim
 
-# Create working directory
 WORKDIR /app
 
-# Copy requirements from backend folder
+# Copy requirements
 COPY backend/requirements.txt .
 
-# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy backend application source
+# Copy whole backend
 COPY backend/ .
 
-# Expose port (Railway sets PORT automatically)
 EXPOSE 8000
 
-# Run the app
-CMD uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}
+# Start Uvicorn and expand PORT correctly on Railway
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port $PORT"]
