--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,7 +8,7 @@ starlette==0.27.0
 sqlalchemy[asyncio]==2.0.23
 asyncpg==0.29.0
 alembic==1.12.1
-
+psycopg[binary]==3.x
 # Authentication & Security
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
